@@ -1,4 +1,4 @@
-README file for Public Domain Raftor.
+README file for C Raftor.
 
     This is a C version of ratfor, derived from a UofA ratfor
     in ratfor. It was originally released to the net sometime
